Add container and footer

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -56,3 +56,20 @@
     </form>
   </div>
 </nav>
+
+<div class="jumbotron">
+  <h1 class="display-3">Hello, world!</h1>
+  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <hr class="my-4">
+  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+  </p>
+</div>
+
+<footer class="footer" text-align="center">
+     <div class="container">
+       <p class="text-muted">Copyright &copy; by Priyanka & Inga.
+       All Rights Reserved from 2018 - 2028</p>
+     </div>
+</footer>
