Distribute code in components
Distributed code in following components by generating components using
following command :
ng generate component [component name]

Header
Container
Footer
Home
Weather-stations

And Connected home —> weather-stations page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,75 +1,1 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand nav-link active" href="#">Volunteer <span class="sr-only">(current)</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarColor02">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" ngbDropdownToggle> Weather Stations </a>
-          <div class="dropdown-menu" aria-labelledby="weatherstations" ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Atlanta, GA</a>
-            <a class="dropdown-item" href="#">Boston, MA</a>
-            <a class="dropdown-item" href="#">Chicago, IL</a>
-            <a class="dropdown-item" href="#">Cincinnati, OH</a>
-            <a class="dropdown-item" href="#">Dallas, TX</a>
-            <a class="dropdown-item" href="#">Des Moines, IA</a>
-            <a class="dropdown-item" href="#">Houston, TX</a>
-            <a class="dropdown-item" href="#">Kansas City, MO</a>
-            <a class="dropdown-item" href="#">Las Vegas, NV</a>
-            <a class="dropdown-item" href="#">Mimmeapolis, MN</a>
-            <a class="dropdown-item" href="#">NewYork, NY</a>
-            <a class="dropdown-item" href="#">Philadelphia, PA</a>
-            <a class="dropdown-item" href="#">Portland, OR</a>
-            <a class="dropdown-item" href="#">Sacramento, CA</a>
-            <a class="dropdown-item" href="#">Tuscon, AZ</a>
-          </div>
-      </li>
-      <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weather" ngbDropdownToggle> Weather </a>
-          <div class="dropdown-menu" aria-labelledby="weather" ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Forecast</a>
-            <a class="dropdown-item" href="#">Current Conditions</a>
-          </div>
-      </li>
-      <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="climate" ngbDropdownToggle> Climate </a>
-          <div class="dropdown-menu" aria-labelledby="climate" ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Climate Map</a>
-            <a class="dropdown-item" href="#">Station Climate</a>
-            <a class="dropdown-item" href="#">Weather Records</a>
-          </div>
-      </li>
-      <li class="nav-item dropdown" ngbDropdown>
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="tools" ngbDropdownToggle> Tools </a>
-        <div class="dropdown-menu" aria-labelledby="climate" ngbDropdownMenu>
-          <a class="dropdown-item" href="#">Unit Conversion</a>
-          <a class="dropdown-item" href="#">Dew Point</a>
-          <a class="dropdown-item" href="#">Wind Power</a>
-        </div>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
-<div class="jumbotron">
-  <h1 class="display-3">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
-</div>
-
-<footer class="footer" text-align="center">
-     <div class="container">
-       <p class="text-muted">Copyright &copy; by Priyanka & Inga.
-       All Rights Reserved from 2018 - 2028</p>
-     </div>
-</footer>
+<router-outlet></router-outlet>
