--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -27,7 +27,7 @@
           </div>
       </li>
       <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weather" ngbDropdownToggle> Weather </a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weather" routerLink="weather" ngbDropdownToggle> Weather </a>
           <div class="dropdown-menu" aria-labelledby="weather" ngbDropdownMenu>
             <a class="dropdown-item" href="#">Forecast</a>
             <a class="dropdown-item" href="#">Current Conditions</a>
