Added new climate component and connect with home page

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -34,7 +34,7 @@
           </div>
       </li>
       <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="climate" ngbDropdownToggle> Climate </a>
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="climate" routerLink="climate" ngbDropdownToggle> Climate </a>
           <div class="dropdown-menu" aria-labelledby="climate" ngbDropdownMenu>
             <a class="dropdown-item" href="#">Climate Map</a>
             <a class="dropdown-item" href="#">Station Climate</a>
