Added new tools component and connect with home page

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -42,7 +42,7 @@
           </div>
       </li>
       <li class="nav-item dropdown" ngbDropdown>
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="tools" ngbDropdownToggle> Tools </a>
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="tools" routerLink="tools" ngbDropdownToggle> Tools </a>
         <div class="dropdown-menu" aria-labelledby="climate" ngbDropdownMenu>
           <a class="dropdown-item" href="#">Unit Conversion</a>
           <a class="dropdown-item" href="#">Dew Point</a>
