--- a/frontend/src/app/tools/tools.component.html
+++ b/frontend/src/app/tools/tools.component.html
@@ -2,3 +2,7 @@
   tools works!
   <a href="" (click)="sendMeHome()"><strong>Take me back</strong></a>
 </p>
+<h1>Angular 5 HttpClient Demo App</h1>
+  <ul>
+    <li *ngFor="let user of users">{{ user.name }}</li>
+  </ul>
