Add separate component for city to display historical data

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       <li class="nav-item dropdown" ngbDropdown>
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="weather-stations" ngbDropdownToggle> Weather Stations </a>
           <div class="dropdown-menu" aria-labelledby="weatherstations" ngbDropdownMenu>
-            <a class="dropdown-item" href="#" routerLink="weather-stations">Atlanta, GA</a>
+            <a class="dropdown-item" href="#" routerLink="weather-stations/atlanta">Atlanta, GA</a>
             <a class="dropdown-item" href="#">Boston, MA</a>
             <a class="dropdown-item" href="#">Chicago, IL</a>
             <a class="dropdown-item" href="#">Cincinnati, OH</a>
