--- a/frontend/src/app/tools/tools.component.html
+++ b/frontend/src/app/tools/tools.component.html
@@ -1,3 +1,4 @@
-<div *ngIf="chart">
-    <canvas id="canvas">{{ chart }}</canvas>
-</div>
+<p>
+  tools works!
+  <a href="" (click)="sendMeHome()"><strong>Take me back</strong></a>
+</p>
