--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -44,6 +44,7 @@
       <li class="nav-item dropdown" ngbDropdown>
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="tools" routerLink="tools" ngbDropdownToggle> Tools </a>
         <div class="dropdown-menu" aria-labelledby="climate" ngbDropdownMenu>
+          <a class="dropdown-item" href="#" routerLink="tools/weathervsderivatives">Weather vs. derivatives</a>
           <a class="dropdown-item" href="#">Unit Conversion</a>
           <a class="dropdown-item" href="#">Dew Point</a>
           <a class="dropdown-item" href="#">Wind Power</a>
