--- a/frontend/src/app/atlanta/atlanta.component.html
+++ b/frontend/src/app/atlanta/atlanta.component.html
@@ -3,15 +3,29 @@
 <br><br>
 <div id="form" onload="onload();">
     <form class="form-inline justify-content-center">
-            <label class="mr-sm-2" for="inlineFormCustomSelect">Select Date Range : </label>
-            <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
+            <div class="form-group mb-2">
+                <label class="mr-sm-2" for="inlineFormCustomSelect">Select Date Range : </label>
+                <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
                     <input #newDate
                         (keyup.enter)="addDate(newDate.value)"
                         (blur)="addDate(newDate.value); newDate.value='' "
-                        placeholder="mm/dd/yy - mm/dd/yy"
-                        name = "daterange">
-            </div> 
-            <button (click)="addDate(newDate.value)" class="btn btn-primary">Submit</button>
+                        class="form-control" 
+                        placeholder="Daterangepicker" 
+                        name = "daterange"
+                        bsDaterangepicker #dpr="bsDaterangepicker">
+                </div>
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <div class="dropdown" ngbDropdown>
+                    <button class="btn btn-primary" id="sortMenu" ngbDropdownToggle>{{selectedCity}}</button>
+                    <div class="dropdown-menu" aria-labelledby="sortMenu" ngbDropdownMenu>
+                        <button class="dropdown-item" *ngFor="let city of cities" (click)="ChangeCity(city)" >{{city}}</button>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group mb-2">
+                <button (click)="addDate(newDate.value)" class="btn btn-primary">Submit</button>
+            </div>
     </form>
 </div>
 <br>
