Add dynamic graph label
The city name in graph label changes according to the selected city.

--- a/frontend/src/app/atlanta/atlanta.component.html
+++ b/frontend/src/app/atlanta/atlanta.component.html
@@ -1,5 +1,5 @@
 <div ng-app="myApp">
-<h3>Atlanta,GA Historical Weather Data</h3>
+<h3>{{selectedCity}} , Historical Weather Data</h3>
 <br><br>
 <div id="form" onload="onload();">
     <form class="form-inline justify-content-center">
