Added Home page design

--- a/frontend/src/app/container/container.component.html
+++ b/frontend/src/app/container/container.component.html
@@ -1,9 +1,33 @@
-<div class="jumbotron">
-  <h1 class="display-3">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
-</div>
+    <div id="body">
+        <div>
+                <h1>Large Data Processing and Visualization</h1><br>
+                <h6>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+                    It has survived not only five centuries, but also the leap into electronic typesetting, 
+                    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets 
+                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker 
+                    including versions of Lorem Ipsum.</h6>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-sm">
+              <a href="#" routerLink="weather-stations/atlanta">
+              <img class="img-gif" title="Historical Weather" src="https://cdn.dribbble.com/users/340460/screenshots/2046488/weather-icons.gif" alt="Historical Weather"/> 
+              <h5>Historical Weather</h5>
+            </a>
+          </div>
+          <div class="col-sm">
+              <a href="#">
+              <img class="img-gif" title="HDD and CDD" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/c48be530971807.563b2b13efcae.gif"/>
+              <h5>HDD and CDD</h5>
+            </a>
+          </div>
+          <div class="col-sm">
+              <a href="#">
+              <img class="img-gif" title="Weather and Price Predictions" src="https://i.pinimg.com/originals/5f/0c/8b/5f0c8bc65470f8b8b011802a14c2a099.gif"/>
+              <h5>Weather and Price Predictions</h5>
+              </a>
+          </div>
+        </div>
+    </div>
