--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,6 +1,4 @@
-<footer class="footer" text-align="center">
-     <div class="container">
-       <p class="text-muted">Copyright &copy; by Priyanka & Inga.
-       All Rights Reserved from 2018 - 2028</p>
-     </div>
-</footer>
+<div id="footer">
+  <p>Copyright &copy; by Priyanka & Inga.
+        All Rights Reserved from 2018 - 2028</p>
+</div>
