--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-container></app-container>
-<app-footer></app-footer>
+<div id="container">
+    <app-header></app-header>
+    <app-container></app-container>
+    <app-footer></app-footer>
+</div>
