Add HDD-CDD component and Predictions component
- The X-axis  labels of graph changes dynamically according to the
number of days selected.
- Code cleaning

--- a/frontend/src/app/container/container.component.html
+++ b/frontend/src/app/container/container.component.html
@@ -12,19 +12,19 @@
         <br>
         <div class="row">
           <div class="col-sm">
-              <a href="#" routerLink="weather-stations/atlanta">
+              <a href="#" routerLink="historical-weather">
               <img class="img-gif" title="Historical Weather" src="https://cdn.dribbble.com/users/340460/screenshots/2046488/weather-icons.gif" alt="Historical Weather"/> 
               <h5>Historical Weather</h5>
             </a>
           </div>
           <div class="col-sm">
-              <a href="#">
+              <a href="#" routerLink="hdd-cdd">
               <img class="img-gif" title="HDD and CDD" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/c48be530971807.563b2b13efcae.gif"/>
               <h5>HDD and CDD</h5>
             </a>
           </div>
           <div class="col-sm">
-              <a href="#">
+              <a href="#" routerLink="predictions">
               <img class="img-gif" title="Weather and Price Predictions" src="https://i.pinimg.com/originals/5f/0c/8b/5f0c8bc65470f8b8b011802a14c2a099.gif"/>
               <h5>Weather and Price Predictions</h5>
               </a>
