--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -7,9 +7,9 @@
 
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
-        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="weather-stations"> Historical Weather </a>
-        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="weather-stations"> HDD & CDD </a>
-        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="weather-stations"> Predictions </a>
+        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="historical-weather"> Historical Weather </a>
+        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="hdd-cdd"> HDD & CDD </a>
+        <a class="nav-link" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="weatherstations" routerLink="predictions"> Predictions </a>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
