--- a/frontend/src/app/predictions/predictions.component.html
+++ b/frontend/src/app/predictions/predictions.component.html
@@ -1,4 +1,37 @@
-<p>
-  predictions works!
-  <a href="" (click)="sendMeHome()"><strong>Take me back</strong></a>
-</p>
+<div ng-app="myApp">
+  <h3>{{selectedCity}} , Historical Weather Data</h3>
+  <br><br>
+  <div id="form" onload="onload();">
+      <form class="form-inline justify-content-center">
+              <div class="form-group mb-2">
+                  <label class="mr-sm-2" for="inlineFormCustomSelect">Select Date Range : </label>
+                  <div class="col-xs-12 col-12 col-sm-6 col-md-4 form-group">
+                      <input #newDate
+                          (keyup.enter)="addDate(newDate.value)"
+                          (blur)="addDate(newDate.value); newDate.value='' "
+                          class="form-control" 
+                          placeholder="Daterangepicker" 
+                          name = "daterange"
+                          bsDaterangepicker #dpr="bsDaterangepicker">
+                  </div>
+              </div>
+              <div class="form-group mx-sm-3 mb-2">
+                  <div class="dropdown" ngbDropdown>
+                      <button class="btn btn-primary" id="sortMenu" ngbDropdownToggle>{{selectedCity}}</button>
+                      <div class="dropdown-menu" aria-labelledby="sortMenu" ngbDropdownMenu>
+                          <button class="dropdown-item" *ngFor="let city of cities" (click)="ChangeCity(city)" >{{city}}</button>
+                      </div>
+                  </div>
+              </div>
+              <div class="form-group mb-2">
+                  <button (click)="addDate(newDate.value)" class="btn btn-primary">Submit</button>
+              </div>
+      </form>
+  </div>
+  <br>
+  <div class="row">
+    <div *ngIf="chart" class="graph-center">
+        <canvas id="canvas">{{ chart }}</canvas>
+    </div>
+  </div>
+</div>
