Adding all the filters for HDD/CDD data view

--- a/frontend/src/app/predictions/predictions.component.html
+++ b/frontend/src/app/predictions/predictions.component.html
@@ -34,4 +34,10 @@
         <canvas id="canvas">{{ chart }}</canvas>
     </div>
   </div>
+  <br><br><br>
+  <div class="row">
+    <div *ngIf="chart" class="graph-center">
+        <canvas id="canvas">{{ chart }}</canvas>
+    </div>
+  </div>
 </div>
