Fixed UI with proper info

--- a/frontend/src/app/container/container.component.html
+++ b/frontend/src/app/container/container.component.html
@@ -1,13 +1,14 @@
     <div id="body">
         <div>
                 <h1>Large Data Processing and Visualization</h1><br>
-                <h6>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                    It has survived not only five centuries, but also the leap into electronic typesetting, 
-                    remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets 
-                    containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker 
-                    including versions of Lorem Ipsum.</h6>
+                <h5>Analyzing long-term trends and fluctuation of all financial tools indices, 
+                    including weather derivatives (weather futures), which is one of the most popular trade we are analyzing in 
+                    this project.
+                    <ul>
+                        The main idea, first of all,  is to explain what weather futures are and how they related to the weather, particularly to the temperature.
+                        The second step for the project is to implement one of the existing algorithms for weather prediction and, based on that, to implement calculations for the prices for the chosen month.
+                    </ul>
+                </h5>
         </div>
         <br>
         <div class="row">
