--- a/frontend/src/app/predictions/predictions.component.scss
+++ b/frontend/src/app/predictions/predictions.component.scss
@@ -11,3 +11,8 @@ h3 {
     border: 3px solid #73AD21;
     padding: 10px;
 }
+#body {
+    text-align: center;
+    padding:10px;
+    padding-bottom:60px;   /* Height of the footer */
+}
