--- a/frontend/src/app/historical-weather/historical-weather.component.scss
+++ b/frontend/src/app/historical-weather/historical-weather.component.scss
@@ -6,8 +6,14 @@ h3 {
 }
 .graph-center {
     margin: auto;
-    width: 80%;
-    height: 70%;
+    width: 70%;
+    height: 10%;
     border: 3px solid #73AD21;
     padding: 10px;
+}
+
+#body {
+    text-align: center;
+    padding:10px;
+    padding-bottom:60px;   /* Height of the footer */
 }
